# PhotoGal

./: .gitignore  GLOSSARY.md  LICENSE  README.md  SPEC.md
.github/workflows/: build-windows.yml
backend/: photogal-server.spec  photogal_entry.py  pyproject.toml
backend/src/photogal/: __init__.py  cli.py  config.py  db.py  device.py  profiling.py  search.py  server.py  thumbnails.py  translate.py  trash.py
backend/src/photogal/api/: clusters.py  deps.py  device.py  faces.py  persons.py  photos.py  process.py  search.py  sources.py  sync.py
backend/src/photogal/models/: clip.py  face.py
backend/src/photogal/pipeline/: analyzer.py  embedder.py  face_analyzer.py  helpers.py  scanner.py
backend/tests/: test_categories.py  test_clip_merge.py  test_clip_perf.py  test_clustering.py  test_config_paths.py  test_device.py  test_dup_detection.py  test_face_analyzer.py  test_face_clustering.py  test_face_db.py  test_face_integration.py  test_face_model.py  test_preflight.py  test_search.py  test_translate.py  test_trash.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/constants/: categories.ts
frontend/src/hooks/: useDeviceInfo.ts  usePipelineSync.ts
frontend/src/store/: selection.ts  toast.ts  ui.ts
scripts/: README.md  build.sh  release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cuda.rs  lib.rs  main.rs
src-tauri/windows/: hooks.nsh
(+15 files in other folders)
